--- a/src/app/ideation/components/ideation-create/ideation-create.component.html
+++ b/src/app/ideation/components/ideation-create/ideation-create.component.html
@@ -369,7 +369,8 @@
                   <div class="block_title" translate="VIEWS.IDEATION_CREATE.TITLE_DESCRIPTION">
                     <div class="tooltip" tooltip>
                       <div class="content_title" translate="VIEWS.IDEATION_CREATE.TOOLTIP_TOPIC_TEXT_TITLE"></div>
-                      <div class="content_description" translate="VIEWS.IDEATION_CREATE.TOOLTIP_TOPIC_TEXT_CONTENT"></div>
+                      <div class="content_description" translate="VIEWS.IDEATION_CREATE.TOOLTIP_TOPIC_TEXT_CONTENT">
+                      </div>
                     </div>
                   </div>
                   <!--div *ngIf="!block.description" translate="VIEWS.IDEATION_CREATE.TITLE_DESCRIPTION_TEXT"></!--div-->
@@ -587,7 +588,8 @@
                 <div class="small_heading" translate="VIEWS.IDEATION_CREATE.SETTINGS_HEADING_LOCALITY">
                   <div class="tooltip" tooltip>
                     <div class="content_title" translate="VIEWS.IDEATION_CREATE.TOOLTIP_TOPIC_LOCALITY_TITLE"></div>
-                    <div class="content_description" translate="VIEWS.IDEATION_CREATE.TOOLTIP_TOPIC_LOCALITY_CONTENT"></div>
+                    <div class="content_description" translate="VIEWS.IDEATION_CREATE.TOOLTIP_TOPIC_LOCALITY_CONTENT">
+                    </div>
                   </div>
                 </div>
                 <div translate="VIEWS.IDEATION_CREATE.SETTINGS_LOCALITY_SELECT_DESC"></div>
@@ -659,13 +661,16 @@
                   <div class="number_wrap mobile_show">
                     <div>3</div>
                   </div>
-                  <div class="small_heading" translate="VIEWS.IDEATION_CREATE.SETTINGS_HEADING_ADD_TO_GROUP">
-                    <!--div class="tooltip" tooltip>
-                      <div class="content_title">Help on its way</div>
-                      <div class="content_description">Help text coming soon! Please tell us what help you were looking
-                        for.</div>
-                    </!--div-->
+                  <div class="small_heading mobile_show"
+                    translate="VIEWS.IDEATION_CREATE.SETTINGS_HEADING_ADD_TO_GROUP">
+                    <div id="add_to_group_tooltip" class="tooltip" tooltip>
+                      <div class="content_title" translate="VIEWS.TOPIC_CREATE.TOOLTIP_ADD_TO_GROUP"></div>
+                      <div class="content_description" translate="VIEWS.TOPIC_CREATE.TOOLTIP_ADD_TO_GROUP_CONTENT">
+                      </div>
+                    </div>
                   </div>
+                  <div class="small_heading mobile_hidden"
+                    translate="VIEWS.IDEATION_CREATE.SETTINGS_HEADING_ADD_TO_GROUP"></div>
                   <div class="mobile_hidden" translate="VIEWS.IDEATION_CREATE.SETTINGS_ADD_TO_GROUP_DESC">
                     <div class="tooltip" tooltip>
                       <div class="content_title" translate="VIEWS.TOPIC_CREATE.TOOLTIP_ADD_TO_GROUP"></div>
@@ -674,12 +679,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="mobile_show" translate="VIEWS.IDEATION_CREATE.SETTINGS_ADD_TO_GROUP_DESC">
-                  <div class="tooltip" tooltip>
-                    <div class="content_title" translate="VIEWS.TOPIC_CREATE.TOOLTIP_ADD_TO_GROUP"></div>
-                    <div class="content_description" translate="VIEWS.TOPIC_CREATE.TOOLTIP_ADD_TO_GROUP_CONTENT"></div>
-                  </div>
-                </div>
+                <div class="mobile_show" translate="VIEWS.IDEATION_CREATE.SETTINGS_ADD_TO_GROUP_DESC"></div>
                 <ng-container *ngIf="groups$ | async as groups;">
                   <ng-container *ngIf="!groups.length">
                     <div class="no_engagements">
