--- a/src/app/group/components/group-invite/group-invite.component.scss
+++ b/src/app/group/components/group-invite/group-invite.component.scss
@@ -145,18 +145,21 @@
   .filter_section {
     align-self: baseline;
   }
-}
-#search_wrap {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-
-#group_members_list_wrap {
 
   .tooltip {
     position: absolute;
     top: 10px;
     right: 0;
+
+    @include mixins.mobile {
+      right: auto;
+      left: -30px;
+    }
   }
+
+}
+#search_wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
