--- a/src/app/topic/components/topic-invite/topic-invite.component.html
+++ b/src/app/topic/components/topic-invite/topic-invite.component.html
@@ -114,10 +114,12 @@
           <div class="row header_row">
             <div class="name"><a translate="COMPONENTS.TOPIC_INVITE.NAME"></a></div>
             <div class="level">
-              <div class="level_heading" translate="COMPONENTS.TOPIC_INVITE.ROLE"><div class="tooltip" tooltip>
-                <div class="content_title" translate="COMPONENTS.TOPIC_INVITE_EDITORS.TOOLTIP_TOPIC_ROLES_HEADING"></div>
-                <div class="content_description" [innerHTML]="'COMPONENTS.TOPIC_INVITE_EDITORS.TOOLTIP_TOPIC_ROLES_DESCRIPTION' | translate"></div>
-              </div></div>
+              <div class="level_heading" translate="COMPONENTS.TOPIC_INVITE.ROLE">
+                <div class="tooltip" tooltip>
+                  <div class="content_title" translate="COMPONENTS.TOPIC_INVITE_EDITORS.TOOLTIP_TOPIC_ROLES_HEADING"></div>
+                  <div class="content_description" [innerHTML]="'COMPONENTS.TOPIC_INVITE_EDITORS.TOOLTIP_TOPIC_ROLES_DESCRIPTION' | translate"></div>
+                </div>
+            </div>
 
               <div class="button_heading" translate="COMPONENTS.TOPIC_INVITE.ACTIONS"></div>
             </div>
@@ -137,6 +139,10 @@
                 <div class="bold" [innerHtml]>{{user.name}}</div>
               </div>
               <div class="level">
+                <div id="mobile_roles_tooltip" class="tooltip" tooltip>
+                  <div class="content_title" translate="COMPONENTS.TOPIC_INVITE_EDITORS.TOOLTIP_TOPIC_ROLES_HEADING"></div>
+                  <div class="content_description" [innerHTML]="'COMPONENTS.TOPIC_INVITE_EDITORS.TOOLTIP_TOPIC_ROLES_DESCRIPTION' | translate"></div>
+                </div>
                 <div class="dropdown" [cosDropdown]>
                   <div class="selection">
                     <div class="selected_item">{{'TXT_TOPIC_LEVELS_' + (user.level) |
