--- a/src/app/topic/topic.component.html
+++ b/src/app/topic/topic.component.html
@@ -634,7 +634,7 @@
                       </defs>
                     </svg>
                     <div class="description_heading" translate="VIEWS.TOPICS_TOPICID.NO_FOLLOW_UP_HEADING"></div>
-                    <div class="button" *ngIf="TopicService.canDelete(topic)">
+                    <div class="button" *ngIf="TopicService.canDelete(topic) && topic.status !== TopicService.STATUSES.closed">
                       <button class="btn_medium_submit animate" (click)="sendToFollowUp(topic)">
                         <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path
