Remove beta from ideation create items

--- a/src/app/my-topics/my-topics.component.html
+++ b/src/app/my-topics/my-topics.component.html
@@ -631,7 +631,7 @@
                     </div>
                     <div class="item_text_wrap">
                       <div class="item_title">
-                        <span translate="COMPONENTS.CREATE.TITLE_IDEATION"></span><span class="beta">(BETA)</span>
+                        <span translate="COMPONENTS.CREATE.TITLE_IDEATION"></span>
                       </div>
                       <div class="item_description" translate="COMPONENTS.CREATE.DESC_IDEATION"></div>
                     </div>
