--- a/src/assets/styles/_themes.scss
+++ b/src/assets/styles/_themes.scss
@@ -85,9 +85,9 @@ $theme-map-default: (
   //gray 700
   $--color-secondary: #ebf4fb,
   //blue 100
-  $--color-scrollbar: #D7E9F8,
+  $--color-scrollbar: #ffffff,
   //blue 200
-  $--color-scrollbar-thumb: #A7D1F3,
+  $--color-scrollbar-thumb: #5C9CD0,
   //blue 300
   $--color-link: #1168a8,
   //blue 700
