--- a/src/app/core/components/search/search.component.scss
+++ b/src/app/core/components/search/search.component.scss
@@ -114,7 +114,7 @@
     }
 
     .line_separator {
-      background-color: var(--color-scrollbar-thumb);
+      background-color: var(--color-blue-200);
     }
     .result_group_wrap {
       display: flex;
