--- a/src/app/shared/components/cos-calender/cos-calender.component.scss
+++ b/src/app/shared/components/cos-calender/cos-calender.component.scss
@@ -55,7 +55,7 @@
 
 .discussion {
   .selected {
-    background-color: var(--color-scrollbar-thumb);
+    background-color: var(--color-blue-200);
     border-radius: 16px;
   }
 }
