--- a/src/app/topic/components/topic-form/topic-form.component.scss
+++ b/src/app/topic/components/topic-form/topic-form.component.scss
@@ -42,7 +42,7 @@
       display: none;
       border-radius: 8px 8px 0 0;
       padding: 12px 8px;
-      background-color: var(--color-scrollbar);
+      background-color: var(--color-blue-100);
 
       @include mixins.tablet {
         display: flex;
@@ -100,7 +100,7 @@
   padding: 8px;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--color-scrollbar);
+  background-color: var(--color-blue-100);
   border-radius: 16px;
   gap: 16px;
 
@@ -130,7 +130,7 @@
   }
 }
 #editors_tablet {
-  background-color: var(--color-scrollbar);
+  background-color: var(--color-blue-100);
   border-radius: 0 0 16px 16px;
 }
 
@@ -548,7 +548,7 @@
   }
 
   .arguments_content {
-    background-color: var(--color-scrollbar);
+    background-color: var(--color-blue-100);
     padding: 24px;
     display: flex;
     flex-direction: column;
