--- a/src/assets/styles/_themes.scss
+++ b/src/assets/styles/_themes.scss
@@ -9,6 +9,8 @@ $--color-on-surfaces: --color-on-surfaces;
 $--color-border: --color-border;
 $--color-border-active: --color-border-active;
 $--color-secondary: --color-secondary;
+$--color-blue-100: --color-blue-100;
+$--color-blue-200: --color-blue-200;
 $--color-scrollbar: --color-scrollbar;
 $--color-scrollbar-thumb: --color-scrollbar-thumb;
 $--color-link: --color-link;
@@ -85,8 +87,10 @@ $theme-map-default: (
   //gray 700
   $--color-secondary: #ebf4fb,
   //blue 100
-  $--color-scrollbar: #ffffff,
+  $--color-blue-100: #D7E9F8,
   //blue 200
+  $--color-blue-200: #A7D1F3,
+  $--color-scrollbar: #ffffff,
   $--color-scrollbar-thumb: #5C9CD0,
   //blue 300
   $--color-link: #1168a8,
@@ -189,9 +193,11 @@ $theme-map-contrast: (
   $--color-border: #000,
   $--color-secondary: #ebf4fb,
   //blue 100
-  $--color-scrollbar: #D7E9F8,
+  $--color-blue-100: #D7E9F8,
   //blue 200
-  $--color-scrollbar-thumb: #A7D1F3,
+  $--color-blue-200: #A7D1F3,
+  $--color-scrollbar: #ffffff,
+  $--color-scrollbar-thumb: #5C9CD0,
   //blue 300
   $--color-link: #1168a8,
   //blue 700
