--- a/src/assets/styles/create_views.scss
+++ b/src/assets/styles/create_views.scss
@@ -393,7 +393,7 @@
       }
 
       &.discussion {
-        border-left-color: var(--color-scrollbar);
+        border-left-color: var(--color-blue-100);
 
         &.active {
           border-bottom: 2px solid var(--color-info);
