--- a/src/app/group/group.component.scss
+++ b/src/app/group/group.component.scss
@@ -33,7 +33,7 @@
       justify-content: center;
       align-items: center;
       gap: 8px;
-      background-color: var(--color-scrollbar);
+      background-color: var(--color-blue-100);
       border-radius: 8px;
       font-size: 14px;
       font-weight: 600;
