--- a/src/assets/styles/_arguments.scss
+++ b/src/assets/styles/_arguments.scss
@@ -262,7 +262,7 @@ argument-reply {
         align-items: center;
         gap: 8px;
         &:hover {
-          background-color: var(--color-scrollbar);
+          background-color: var(--color-blue-100);
         }
       }
 
