FIX pointless "or" in login/register UI without external auth
Normally, these UIs show a list of external out icon, then the word "or" and
then the builtin e-mail based authentication. However, when all external
authentication providers are disabled, their icons are hidden, but the (now
pointless and confusing) "or" stays. This commit fixes that.

--- a/src/app/account/components/login/login-dialog.component.html
+++ b/src/app/account/components/login/login-dialog.component.html
@@ -82,7 +82,7 @@
 
             </a>
           </div>
-          <div translate="COMPONENTS.LOGIN_FORM.LOGIN_OR"></div>
+          <div translate="COMPONENTS.LOGIN_FORM.LOGIN_OR" *ngIf="authMethodsAvailable.esteid || authMethodsAvailable.smartId || authMethodsAvailable.google || authMethodsAvailable.facebook"></div>
           <login-form [isDialog]="true" [redirectSuccess]="redirectSuccess" [email]="email"></login-form>
         </div>
       </ng-container>
