--- a/src/app/account/components/login/login.component.html
+++ b/src/app/account/components/login/login.component.html
@@ -65,7 +65,7 @@
 
       </a>
     </div>
-    <div translate="COMPONENTS.LOGIN_FORM.LOGIN_OR"></div>
+    <div translate="COMPONENTS.LOGIN_FORM.LOGIN_OR" *ngIf="authMethodsAvailable.esteid || authMethodsAvailable.smartId || authMethodsAvailable.google || authMethodsAvailable.facebook"></div>
     <login-form [redirectSuccess]="redirectSuccess" [email]="email"></login-form>
   </div>
 </div>
