--- a/src/app/account/components/register/register.component.html
+++ b/src/app/account/components/register/register.component.html
@@ -79,7 +79,7 @@
 
       </a>
     </div>
-    <div translate="VIEWS.REGISTER.REGISTER_OR"></div>
+    <div translate="VIEWS.REGISTER.REGISTER_OR" *ngIf="authMethodsAvailable.esteid || authMethodsAvailable.smartId || authMethodsAvailable.google || authMethodsAvailable.facebook"></div>
     <register-form [redirectSuccess]="redirectSuccess" [email]="email"></register-form>
   </div>
 </div>
